<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyShow</string>
    <string name="action_settings">Settings</string>
    <string name="baby_name">Baby</string>
    <string name="baby_age_format">%d岁</string>
    
    
    <!-- Image View 的描述 -->
    <string name="profile_icon_desc">个人头像</string>
    <string name="tab_title_home">首页</string>
    <string name="tab_title_photos">照片库</string>
    <string name="tab_title_personal">个人</string>
    <string name="hint_login_id">帐号 / 邮箱</string>
    <string name="hint_login_password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码 ?</string>
    <string name="toast_validate_fail">验证失败</string>
    <string name="toast_input_email">请输入账号</string>
    <string name="toast_input_password">请输入密码</string>
    <string name="http_do_login">http://www.qebaby.com/login/dologin</string>
    <string name="like">赞</string>
    <string name="comment">评论</string>

</resources>
