<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@id/profile_icon_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/profile_icon_desc" />

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profile_icon_iv"
            android:orientation="vertical" >

            <TextView
                android:id="@id/baby_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baby_name" />

            <TextView
                android:id="@id/growth_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15分钟前"
                android:textSize="10sp" />

            <TextView
                android:id="@id/growth_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="宝宝两岁了"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@id/comment_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:text="@string/comment" />

        <Button
            android:id="@id/like_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:text="@string/like" />
    </LinearLayout>

</LinearLayout>